# mcp-server-project-tracker

./: .gitignore  CLAUDE.md  PYDANTIC_MIGRATION.md  README.md  config.example.json  main.py  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
docs/: installation.md  tools-reference.md  usage.md
models/: __init__.py  task.py  task_priority.py  task_status.py
tests/: __init__.py  conftest.py  test_add_task.py  test_batch_operations.py  test_get_one_task.py  test_list_tasks.py  test_mcp_integration.py  test_sprint_stats.py  test_update_task.py
utils/: local_file_connector.py  planilhas_connector.py
