[project]
name = "mcp-server-sheets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "mcp[cli]==1.18.0",
    "pandas>=2.3.3",
    "openpyxl>=3.1.0",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "python-dotenv==1.1.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
